docs/core/v0.19/_sources/reference/tmlt/core/utils/misc/index.rst.txt



***********
misc
***********

.. py:module:: tmlt.core.utils.misc

.. autoapi-nested-parse::

   Miscellaneous helper functions and classes.











Functions
=========

.. list-table::

   * - :func:`.get_nonconflicting_string`
     - Returns a string distinct from given strings.
   * - :func:`.print_sdf`
     - Prints a spark dataframe in a deterministic way.
   * - :func:`.copy_if_mutable`
     - Returns a deep copy of argument if it is mutable.
   * - :func:`.get_fullname`
     - Returns the fully qualified name of the given object.
   * - :func:`.escape_column_name`
     - Escapes column name if it contains special characters.
   * - :func:`.get_materialized_df`
     - Returns a new DataFrame constructed after materializing.

.. py:function:: get_nonconflicting_string(strs)

   Returns a string distinct from given strings.



.. py:function:: print_sdf(sdf)

   Prints a spark dataframe in a deterministic way.



.. py:function:: copy_if_mutable(value)

   Returns a deep copy of argument if it is mutable.



.. py:function:: get_fullname(obj)

   Returns the fully qualified name of the given object.

   :param obj: Object to get the name of.



.. py:function:: escape_column_name(column_name)

   Escapes column name if it contains special characters.

   :param column_name: The name of the column to check and potentially escape.



.. py:function:: get_materialized_df(sdf, table_name)

   Returns a new DataFrame constructed after materializing.

   :param sdf: DataFrame to be materialized.
   :param table_name: Name to be used to refer to the table.
                      If a table with ``table_name`` already exists, an error is raised.




Classes
=======

.. list-table::

   * - :class:`.ConciseFrozenSet`
     - A frozenset that prints itself like a set.

   
.. py:class:: ConciseFrozenSet

   Bases: :class:`frozenset`

   A frozenset that prints itself like a set.







   .. automethod:: __init__




